src/app/shared/layout/project-list/project-list.component.scss
@import 'styles/colors';
@import 'styles/fonts';
@import 'styles/base/texts';

.projects-list {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: $base;
  padding-top: 8rem;
  gap: 4rem;

  &__wrap {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 4rem;
  }

  &__title {
    &::after {
      background-color: $on-base;
      margin: 4rem auto 0;
    }
  }
  &__description {
    @extend .p;
  }

  &__grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-flow: dense;
    grid-gap: 0;
  }

  &__item {
    grid-row: span 1;
    grid-column: span 1;
    transition: opacity .4s ease-in-out;

    &.fade-out { opacity: 0; }
    &.fade-in { opacity: 1; }

    &.double-vertical {
      grid-row: span 2;
    }
    &.double-horizontal {
      grid-column: span 2;
    }
  }

  &__filters {
    display: flex;
    justify-content: center;
    gap: 2rem;

    .btn {
      &-filter {
        font-family: $base-font-family;
        color: $primary;
        text-transform: uppercase;
        border: 1px solid $primary;
        border-radius: 1rem;
        letter-spacing: .02rem;
        font-size: 1.2rem;
        font-weight: bold;
        background: transparent;
        padding: 1.5rem 4rem;
        transition: color .2s ease-in-out, background .4s ease-in-out, border-color .4s ease-in-out;

        &.is-active {
          color: $on-primary;
          background: $primary;

          &:hover {
            color: $on-secondary;
            background: $secondary;
            border-color: $secondary;
          }
        }

        &:hover {
          color: $on-primary;
          background: $primary;
        }
      }
    }
  }
}

// MOBILE
@media only screen and (max-width: 930px) {
  .projects-list {
    padding-top: 6rem;

    &__wrap {
      padding: 0 4rem;
      text-align: center;
    }

    &__filters {
      width: calc(100vw - 4rem);
      padding-bottom: 1rem;
      overflow-x: scroll;
      overflow-y: hidden;

      &::-webkit-scrollbar {
        height: .5rem;
        background: $base;
      }
  
      &::-webkit-scrollbar-thumb {
        border-radius: .5rem;
        background: $primary;
      }
    }

    // PORTRAIT 
    @media only screen and (orientation: portrait) {
      &__grid {
        width: calc(100vw - 4rem);
        grid-template-columns: repeat(1, 1fr);
      }

      &__item {
        height: 25rem;
  
        &.double-vertical {
          height: 50rem;
        }
  
        &.double-horizontal {
          grid-row: span 1;
          grid-column: span 1;
        }
      }
    }

    // LANDSCAPE 
    @media only screen and (orientation: landscape) {
      &__grid {
        width: calc(100vw - 4rem);
        grid-template-columns: repeat(3, 1fr);
      }
    }
  }
}

// TABLETS
@media only screen and (min-width: 931px) and (max-width: 1200px) {
  .projects-list {
    padding-top: 6rem;

    &__wrap {
      padding: 0 4rem;
      text-align: center;
    }

    &__filters {
      width: calc(100vw - 8rem);
      padding-bottom: 1rem;
      overflow-x: scroll;
      overflow-y: hidden;

      &::-webkit-scrollbar {
        height: .5rem;
        background: $base;
      }
  
      &::-webkit-scrollbar-thumb {
        border-radius: .5rem;
        background: $primary;
      }
    }
  }
}

